SEM Consolidated Habitation

--- a/SEM/SEM_Consolidated_RC.ipynb
+++ b/SEM/SEM_Consolidated_RC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "a9ec38b2",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
+   "id": "fb99abcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "assam_rcs_gdf = gpd.read_file(r'RawInputData/Assam_Revenue_Circles/assam_revenue_circle_nov2022.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "a8607799",
    "metadata": {},
    "outputs": [],
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "3b4e51c7",
    "metadata": {},
    "outputs": [],
@@ -40,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "817a4cc3",
    "metadata": {},
    "outputs": [],
@@ -57,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "ddde027e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +78,7 @@
     "flood_proneness =~ Inundation + assam_dist_from_major_rivers_updated_3857 + sum + GCN250_ARCIII_average + strm_filled_slope_degrees + ndvi + srtm_filled_dem + assam_soil_silt + assam_soil_loamysand + assam_lith_neogene + assam_lith_paleogene + assam_lith_paleozoic + assam_lith_quaternary + assam_lith_tertiary + assam_lith_undevelopedprecambrian + landuse_rangeland + landuse_vegetation\n",
     "demography =~ ind_ppp_UNadj + aged + young + percaay + deprived + nophone + noSanitation + nodrinkingWater + totLivestock\n",
     "infra_access =~ ndbi + proximity_hosptial_rd + proximity_embankment_rd + proximity_rail_rd + proximity_local_rd + proximity_arterial_rd\n",
-    "flood_impact =~ population_affected + human_lives_lost + roads_dam + bridges_dam + embankment_total\n",
+    "flood_impact =~ population_affected + human_lives_lost + roads_dam + bridges_dam + embankment_total + crop_area_affected\n",
     "preparedness =~ Count_Total + Count_SDRF + Count_SOPD + Count_RIDF + Sum_Total + Sum_RIDF + Sum_Erosion\n",
     "\n",
     "# regressions\n",
@@ -78,30 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "f49e0830",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error for:  MLW\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "WARNING:root:Solver didnt converge, see SolverResult.\n",
       "WARNING:root:Solver didnt converge, see SolverResult.\n",
-      "WARNING:root:Fisher Information Matrix is not PD.Moore-Penrose inverse will be used instead of Cholesky decomposition. See 10.1109/TSP.2012.2208105.\n"
+      "WARNING:root:Solver didnt converge, see SolverResult.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error for:  FIML\n",
       "Error for:  GLS\n"
      ]
     }
@@ -113,8 +118,9 @@
     "         obj=optimiser,\n",
     "         solver='SLSQP',\n",
     "        )\n",
-    "    \n",
     "    try:\n",
+    "        diagram_lv = semopy.semplot(model, 'SEM_Results/'+optimiser+\"_LV.png\", plot_exos=False)\n",
+    "        diagram = semopy.semplot(model, 'SEM_Results/'+optimiser+\".png\")\n",
     "        coeff_df = model.inspect()\n",
     "        model_estimates_sheet = SEM_ModelEstimates_ConsolidatedRC_google_sheet.worksheet('title',optimiser)\n",
     "        model_estimates_sheet.clear()\n",
@@ -134,6 +140,8 @@
     "    \n",
     "    try:\n",
     "        factorScores = model.predict_factors(consolidated_sem_input_rc_norm.fillna(0))\n",
+    "        factorScores['object_id'] = consolidated_sem_input_rc_norm.fillna(0).object_id.astype(int)\n",
+    "        factorScores = factorScores.merge(assam_rcs_gdf[['object_id','revenue_cr','district_3']], on='object_id')        \n",
     "        factorscores_sheet = SEM_FactorScores_ConsolidatedRC_google_sheet.worksheet('title',optimiser)\n",
     "        factorscores_sheet.clear()\n",
     "        factorscores_sheet.set_dataframe(factorScores,(1,1))\n",
@@ -144,30 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9d80c714",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#RANDOM EFFECTS\n",
-    "model_randomeffects = semopy.ModelEffects(structural_model_spec)\n",
-    "model_randomeffects.fit(consolidated_sem_input_rc_norm.fillna(0), group='object_id')\n",
-    "\n",
-    "coeff_df = model_randomeffects.inspect()\n",
-    "model_estimates_sheet = SEM_ModelEstimates_ConsolidatedRC_google_sheet.worksheet('title','RandomEffects')\n",
-    "model_estimates_sheet.clear()\n",
-    "model_estimates_sheet.set_dataframe(coeff_df,(1,1))\n",
-    "\n",
-    "factorScores = model_randomeffects.predict_factors(consolidated_sem_input_rc_norm.fillna(0))\n",
-    "factorscores_sheet = SEM_FactorScores_ConsolidatedRC_google_sheet.worksheet('title','RandomEffects')\n",
-    "factorscores_sheet.clear()\n",
-    "factorscores_sheet.set_dataframe(factorScores,(1,1))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fc57294",
+   "id": "39ca99b7",
    "metadata": {},
    "outputs": [],
    "source": []
