--- a/SEM/SEM_InputData_Preparation.ipynb
+++ b/SEM/SEM_InputData_Preparation.ipynb
@@ -2,30 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "4a906f8f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pygsheets"
+    "import pygsheets\n",
+    "import regex as re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "581182a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "frims = pd.read_csv(r'RawInputData/frims_damages.csv')\n",
+    "frims.crop_area_affected = frims.crop_area_affected.apply(lambda x: re.findall(r'\\d+\\.*\\d*',x)[0])\n",
+    "frims.crop_area_affected = frims.crop_area_affected.astype(float)\n",
     "frims_5y = frims.groupby(['object_id'])[['population_affected','crop_area_affected',\n",
     "                                        'human_lives_lost','roads_dam','bridges_dam','embankment_total']].sum().reset_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "afbbcd3a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b8d96b30",
    "metadata": {},
    "outputs": [],
@@ -51,12 +54,12 @@
     "infra_access = pd.read_csv(r'RawInputData/infra_access.csv')\n",
     "infra_access = infra_access.groupby('object_id')[['proximity_hosptial_rd', 'proximity_embankment_rd',\n",
     "       'proximity_rail_rd', 'proximity_local_rd', 'proximity_arterial_rd',\n",
-    "       'ndbi']].mean().reset_index()"
+    "       'ndbi']].median().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c8018331",
    "metadata": {},
    "outputs": [],
@@ -64,12 +67,12 @@
     "demographicvulnerability = pd.read_csv(r'RawInputData/demographicvulnerability.csv')\n",
     "demographicvulnerability = demographicvulnerability.groupby('object_id')[['ind_ppp_UNadj', 'aged', 'young', 'percaay',\n",
     "       'deprived', 'nophone', 'noSanitation', 'nodrinkingWater',\n",
-    "       'totLivestock']].mean().reset_index()"
+    "       'totLivestock']].median().reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3ec71d09",
    "metadata": {},
    "outputs": [],
@@ -112,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "bc92a67c",
    "metadata": {},
    "outputs": [],
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "00216eb5",
    "metadata": {},
    "outputs": [],
@@ -133,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "6e562139",
    "metadata": {},
    "outputs": [],
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "5d70872d",
    "metadata": {},
    "outputs": [],
@@ -153,14 +156,6 @@
     "consolidated_5y_sheet.clear()\n",
     "consolidated_5y_sheet.set_dataframe(consolidated_5y, (1,1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f90e21c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
