Add RC Level Roads damaged FRIMS 2023

--- a/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_2023_DailyScrapers.ipynb
+++ b/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_2023_DailyScrapers.ipynb
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "19c824ca",
+   "id": "258e2557",
    "metadata": {},
    "outputs": [
     {
@@ -686,12 +686,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e81aeec1",
+   "execution_count": 20,
+   "id": "06abbc59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for folder_slug in ['FRIMS_EMBANKMENTS_BREACHED']:\n",
+    "for folder_slug in folder_slug_dict.values():\n",
     "    scraped_files_daily = glob.glob(r'Data_2023/Scraped Data/{}/*.csv'.format(folder_slug))\n",
     "    \n",
     "    dfs = []\n",
@@ -702,286 +702,13 @@
     "    FRIMS_DAMAGES = pd.concat(dfs)\n",
     "    FRIMS_DAMAGES['Date'] = pd.to_datetime(FRIMS_DAMAGES['Date'],format='%d-%m-%Y')\n",
     "    FRIMS_DAMAGES = FRIMS_DAMAGES.sort_values(by='Date')\n",
-    "    FRIMS_DAMAGES.drop_duplicates().dropna().to_csv('Data_2023/Cleaned Data/{}_MASTER_2023.csv'.format(folder_slug))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "1bb4a4cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>District</th>\n",
-       "      <th>Number</th>\n",
-       "      <th>Details</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-11</td>\n",
-       "      <td>Biswanath</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Gohpur - Kukurjan River Embankment near about ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-06-12</td>\n",
-       "      <td>Lakhimpur</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Nowboicha - Embankment at Pabha Nadi River nea...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-12</td>\n",
-       "      <td>Darrang</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Mangaldoi - Afflux Bund at Noanadi Kachia Bund...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-12</td>\n",
-       "      <td>Biswanath</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Gohpur - Dubia River Embankments is breached f...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-14</td>\n",
-       "      <td>Lakhimpur</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Nowboicha - Breached occurred at Singra River ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-15</td>\n",
-       "      <td>Goalpara</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Matia - Dohapara Bamunpara Bandh | Bamunpara |...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-16</td>\n",
-       "      <td>Lakhimpur</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Narayanpur - Farm bundh L/S-175 m R/S-175 m | ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-16</td>\n",
-       "      <td>Udalguri</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Harisinga - No. 2 Singrimari Suklai river emba...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-06-17</td>\n",
-       "      <td>Sonitpur</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chariduar - 1 no embankment breached on DTD 17...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-17</td>\n",
-       "      <td>Darrang</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Mangaldoi - Approach Road in Noanadi Kachia Bu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-17</td>\n",
-       "      <td>Nagaon</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Kampur - Premajaan Embankment at Saibuk Gaon |...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-06-17</td>\n",
-       "      <td>Udalguri</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Kalaigaon - Embankment at Majarchuba in the L/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-20</td>\n",
-       "      <td>Udalguri</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Harisinga - Dahalahabi embankment | Dahalahabi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-21</td>\n",
-       "      <td>Baksa</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Barama - Breach occurred on L/B of Mora Paglad...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-21</td>\n",
-       "      <td>Nalbari</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Tihu - ROAD CUM EMBANMENT,R/B MORA PAGOLDIA RI...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2023-06-22</td>\n",
-       "      <td>Darrang</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Mangaldoi - Breached at u/s afflux bund cum ro...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-22</td>\n",
-       "      <td>Bajali</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Bajali - Pahumara river breached at left bank ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2023-06-22</td>\n",
-       "      <td>Biswanath</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Gohpur - Chatrang river R/Bank embankment brea...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-06-22</td>\n",
-       "      <td>Nalbari</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Nalbari - Pagaldia river at Nalbari sonkuriha ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-23</td>\n",
-       "      <td>Biswanath</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Gohpur - Chatrang P&amp;R D Bund | At L/Bank or Ri...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2023-06-25</td>\n",
-       "      <td>Darrang</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Mangaldoi - CM Dutta | At village Mollapara | ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Date   District  Number  \\\n",
-       "0 2023-06-11  Biswanath       1   \n",
-       "2 2023-06-12  Lakhimpur       1   \n",
-       "1 2023-06-12    Darrang       3   \n",
-       "0 2023-06-12  Biswanath       1   \n",
-       "0 2023-06-14  Lakhimpur       2   \n",
-       "0 2023-06-15   Goalpara       1   \n",
-       "0 2023-06-16  Lakhimpur       2   \n",
-       "1 2023-06-16   Udalguri       2   \n",
-       "2 2023-06-17   Sonitpur       1   \n",
-       "0 2023-06-17    Darrang       2   \n",
-       "1 2023-06-17     Nagaon       1   \n",
-       "3 2023-06-17   Udalguri       1   \n",
-       "0 2023-06-20   Udalguri       1   \n",
-       "0 2023-06-21      Baksa       3   \n",
-       "1 2023-06-21    Nalbari       1   \n",
-       "2 2023-06-22    Darrang       1   \n",
-       "0 2023-06-22     Bajali       7   \n",
-       "1 2023-06-22  Biswanath       1   \n",
-       "3 2023-06-22    Nalbari       1   \n",
-       "0 2023-06-23  Biswanath       1   \n",
-       "0 2023-06-25    Darrang       3   \n",
-       "\n",
-       "                                             Details  \n",
-       "0  Gohpur - Kukurjan River Embankment near about ...  \n",
-       "2  Nowboicha - Embankment at Pabha Nadi River nea...  \n",
-       "1  Mangaldoi - Afflux Bund at Noanadi Kachia Bund...  \n",
-       "0  Gohpur - Dubia River Embankments is breached f...  \n",
-       "0  Nowboicha - Breached occurred at Singra River ...  \n",
-       "0  Matia - Dohapara Bamunpara Bandh | Bamunpara |...  \n",
-       "0  Narayanpur - Farm bundh L/S-175 m R/S-175 m | ...  \n",
-       "1  Harisinga - No. 2 Singrimari Suklai river emba...  \n",
-       "2  Chariduar - 1 no embankment breached on DTD 17...  \n",
-       "0  Mangaldoi - Approach Road in Noanadi Kachia Bu...  \n",
-       "1  Kampur - Premajaan Embankment at Saibuk Gaon |...  \n",
-       "3  Kalaigaon - Embankment at Majarchuba in the L/...  \n",
-       "0  Harisinga - Dahalahabi embankment | Dahalahabi...  \n",
-       "0  Barama - Breach occurred on L/B of Mora Paglad...  \n",
-       "1  Tihu - ROAD CUM EMBANMENT,R/B MORA PAGOLDIA RI...  \n",
-       "2  Mangaldoi - Breached at u/s afflux bund cum ro...  \n",
-       "0  Bajali - Pahumara river breached at left bank ...  \n",
-       "1  Gohpur - Chatrang river R/Bank embankment brea...  \n",
-       "3  Nalbari - Pagaldia river at Nalbari sonkuriha ...  \n",
-       "0  Gohpur - Chatrang P&R D Bund | At L/Bank or Ri...  \n",
-       "0  Mangaldoi - CM Dutta | At village Mollapara | ...  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "FRIMS_DAMAGES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "c7ad6002",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_21-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_15-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_16-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_23-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_11-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_20-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_17-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_25-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_14-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_12-06-2023.csv',\n",
-       " 'Data_2023/Scraped Data/FRIMS_EMBANKMENTS_BREACHED/FRIMS_EMBANKMENTS_BREACHED_22-06-2023.csv']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scraped_files_daily"
+    "    FRIMS_DAMAGES.drop_duplicates().dropna().to_csv('Data_2023/Cleaned Data/{}_MASTER_2023.csv'.format(folder_slug), index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83c38154",
+   "id": "fb4c9c9c",
    "metadata": {},
    "outputs": [],
    "source": []
