Add lat-lons embankments breached FRIMS 2023

--- a/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_InformationExtraction_2023.ipynb
+++ b/Scrapers/FRIMS_Daily_Reports_Scraper/FRIMS_InformationExtraction_2023.ipynb
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "f6c17cee",
+   "id": "6f2f3445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26d0279a",
+   "id": "a785d49a",
    "metadata": {},
    "source": [
     "# Table of Contents:\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "441c44d3",
+   "id": "c133c003",
    "metadata": {},
    "source": [
     "## EMBANKMENT AFFECTED <a class=\"anchor\" id=\"embankmentaffected\"></a>"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "0f0a7f74",
+   "id": "0a116d6a",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "c2856f1d",
+   "id": "042a30d0",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "fb4ebb1a",
+   "id": "916776c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "49c2a879",
+   "id": "e0e70349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "a6d9343d",
+   "id": "bcba3078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0ca8775",
+   "id": "dad480d1",
    "metadata": {},
    "source": [
     "## EMBANKMENT BREACHES <a class=\"anchor\" id=\"embankmentbreaches\"></a>"
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "4cdd593a",
+   "id": "9b28bd4e",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "6fb97fa9",
+   "id": "461d4ece",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "a4bab207",
+   "id": "2a35e056",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "b4e201fd",
+   "id": "16df1628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "1f38b5fa",
+   "id": "5c4fd8f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a06aef2",
+   "id": "a313391e",
    "metadata": {},
    "source": [
     "## BRIDGES DAMAGED <a class=\"anchor\" id=\"bridgesdamaged\"></a>"
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "2dcbb09e",
+   "id": "cf53c2fa",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "19a19cca",
+   "id": "83e59710",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "31df2e62",
+   "id": "393ba6e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "37f6ff2a",
+   "id": "b2512901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "070f1a32",
+   "id": "c75f14a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "1733f17f",
+   "id": "ef1349b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a49b8776",
+   "id": "84144e55",
    "metadata": {},
    "source": [
     "## ROADS DAMAGED <a class=\"anchor\" id=\"roadsdamaged\"></a>"
@@ -1251,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "b5dd3b10",
+   "id": "519abcb0",
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "6c32b560",
+   "id": "e144ede9",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "e6e4ca5e",
+   "id": "4088e965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97672639",
+   "id": "b1f88a19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfb7d458",
+   "id": "35141fab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1342,7 +1342,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19de7ae9",
+   "id": "0722d0b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "998423c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embankments_breached_df = pd.read_csv('Data_2023/Cleaned Data/FRIMS_EMBANKMENTS_BREACHED_MASTER_2023.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "8953a43f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "longitudes_list = []\n",
+    "latitudes_list = []\n",
+    "\n",
+    "for idx, row in embankments_breached_df.iterrows():\n",
+    "    details = row['Details']\n",
+    "    long_lats = re.findall('\\d{2}\\.\\d{6}', details)\n",
+    "    longitudes = list(filter(lambda x: float(x) > 40, long_lats))\n",
+    "    longitudes_list.append(longitudes)\n",
+    "    \n",
+    "    latitudes = list(filter(lambda x: float(x) < 40, long_lats))\n",
+    "    latitudes_list.append(latitudes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "id": "3217be8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "longitudes_list = flatten_list(longitudes_list)\n",
+    "latitudes_list = flatten_list(latitudes_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "f29e9a96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "breaches_lat_lon_df = pd.DataFrame([longitudes_list,latitudes_list]).T\n",
+    "breaches_lat_lon_df.columns = ['Longitude', 'Latitude']\n",
+    "breaches_lat_lon_df.to_csv('Data_2023/Cleaned Data/LAT_LONS_FRIMS_EMBANKMENTS_BREACHED_MASTER_2023.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "acfc52b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten_list(nested_list):\n",
+    "    flattened_list = []\n",
+    "    for item in nested_list:\n",
+    "        if isinstance(item, list):\n",
+    "            flattened_list.extend(flatten_list(item))\n",
+    "        else:\n",
+    "            flattened_list.append(item)\n",
+    "    return flattened_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db8082ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1350,79 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a7efc7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ed883ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60494222",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34b10d7b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7589618",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5d4241c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6f9ad8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bea9a44",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3003560",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87e80132",
+   "id": "9af9e974",
    "metadata": {},
    "outputs": [],
    "source": []
